# Pawgrab

./: .dockerignore  .env.example  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  deploy-website.yml  docs.yml  workflow.yml
api/: index.html
architecture/: index.html
assets/: animation-D2Q4L9UQ.js  index-CH3egWiM.js  index-CIoiAIaw.js  index-Csv4c82J.css  markdown-C511fNrE.js  react-vendor-CmvcjyeI.js  syntax-highlighter-JZXsqoUc.js  three-Bjk-dR_r.js
cli/: __init__.py  index.html  main.py
configuration/: index.html
dashboard/: index.html
docs/: api.md  architecture.md  cli.md  configuration.md  crawling.md  deployment.md  extraction.md  index.md  scraping.md
pawgrab/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
pawgrab/ai/: chunking.py  extractor.py  openai_provider.py  prompts.py  providers.py
pawgrab/api/: batch.py  crawl.py  extract.py  health.py  map.py  metrics.py  proxy.py  (+4 more)
sdk/python/: README.md  pyproject.toml
sdk/python/pawgrab_sdk/: __init__.py  client.py  models.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  test_api_auth.py  test_api_batch.py  test_api_map.py  test_api_scrape.py  test_api_search.py  test_capture.py  test_chunking.py  test_content_filters.py  test_crawl_strategies.py  test_dispatcher.py  test_engine_antibot.py  test_engine_browser.py  test_engine_cleaner.py  test_engine_converter.py  test_engine_fetcher.py  test_engine_robots.py  test_extractors.py  test_hooks.py  test_media_extraction.py  test_monitor.py  test_page_actions.py  test_pdf_extractor.py  test_proxy_pool.py  test_queue_worker.py  test_rendering_cache.py  test_scrape_service.py  test_screenshot_pdf.py  test_sse_streaming.py  test_utils_rate_limiter.py  test_utils_url.py  test_webhook.py
website/: .prettierrc  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
(+76 files in other folders)
